--- a/css/main.css
+++ b/css/main.css
@@ -104,16 +104,17 @@ a:focus{
 /*		Header 		*/
 
 header{
-	position: relative;
+	position: absolute;
+	top:0;
 	display: block;
 	width: 100%;
 	height: 130px;
 	z-index: 99;
-	background-color: #41c17d;
+	/*background-color: #41c17d;
 	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
 	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
 	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
+	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);*/
 }
 
 header .logo{
