--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ header{
 	top:0;
 	display: block;
 	width: 100%;
-	height: 130px;
+	height: 100vh;
 	z-index: 99;
 	/*background-color: #41c17d;
 	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
