--- a/css/main.css
+++ b/css/main.css
@@ -368,11 +368,11 @@ a.app_link{
 
 /*		Featured on section 		*/
 
-.featured_on{
+/*.featured_on{
 	width: 100%;
 	padding: 25px 0;
 	background: #f3f3f3;
-}
+}*/
 
 .featured_on ul{
 	margin: 0;
