--- a/css/main.css
+++ b/css/main.css
@@ -408,8 +408,12 @@ a.app_link{
 
 /*		About section 		*/
 
-.about{
+.about > div{
 	padding: 100px 0;
+	background: url(img/acc-top-right.png) no-repeat;
+	background-position-y: -1px;
+	background-position-x: right;
+	padding-top: 200px;
 }
 
 .about .iphone{
