--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ header .social li:first-child{
 .hero .caption h1{
 	color: #fff;
 	font-family: "open_bold", Helvetica, Arial, sans-serif;
-	font-size: 34px;
+	font-size: 5rem;
 	font-weight: bold;
 	word-break: break-word;
 }
