--- a/css/main.css
+++ b/css/main.css
@@ -130,10 +130,13 @@ header .logo{
 
 header .logo-mobile{
 	position: absolute;
-	left: 0;
 	width: 300px;
 	top: 3rem;
 	left: 10px;
+}
+
+header .logo-mobile img{
+	width:100%
 }
 
 header .burger_icon{
