--- a/css/main.css
+++ b/css/main.css
@@ -142,7 +142,7 @@ header .logo-mobile img{
 header .burger_icon{
 	display: none;
 	float: right;
-	background: #ffffff;
+	/*background: #ffffff;*/
 	padding: 5px 10px;
 	text-transform: uppercase;
 
@@ -155,6 +155,16 @@ header .burger_icon{
 	border-radius: 2px;
 
 	margin: 45px 10px 0 0;
+	
+	display: block;
+	position: absolute;
+	width: 100%;
+	left: 0;
+	background: #359663;
+	text-align: center;
+	color: #fff;
+	font-weight: bold;
+	top: 100px;
 }
 
 header .burger_icon:hover{
