--- a/css/main.css
+++ b/css/main.css
@@ -154,7 +154,7 @@ header .burger_icon{
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
 
-	margin: 45px 10px 0 0;
+	margin: 0;
 	
 	position: absolute;
 	width: 100%;
@@ -164,6 +164,7 @@ header .burger_icon{
 	color: #fff;
 	font-weight: bold;
 	top: 100px;
+	z-index:99
 }
 
 header .burger_icon:hover{
@@ -257,7 +258,7 @@ header .social li:first-child{
     -webkit-transform: translate(0,-50%);
     -moz-transform: translate(0,-50%);
     -o-transform: translate(0,-50%);
-    z-index: 99;
+    z-index: 9;
 }
 
 .hero .caption h1{
