--- a/css/main.css
+++ b/css/main.css
@@ -253,8 +253,8 @@ header .social li:first-child{
     position: absolute;
     max-width: 550px;
     margin-left: 0;
-    top: 40%;
-    left: -10%;
+    top: 30%;
+    left: 1rem;
     /*border-right: 1px solid #fff;
     height: 300px;*/
     padding-top: 4rem;
@@ -300,7 +300,7 @@ header .social li:first-child{
     	width: 110%;
     	height: 100vh;
     	background-size: 100%;
-    	background-position: center 90%;
+    	background-position: center 80%;
     	left: -5%;
     	position: relative;
 }
