--- a/css/main.css
+++ b/css/main.css
@@ -242,7 +242,7 @@ header .social li:first-child{
 	position: relative;
 	width: 100%;
 	height: 90vh;
-	background: url('../img/hero.jpg') no-repeat fixed center center;	
+	background: url('../img/bg-teluk-lamong.jpg') no-repeat fixed center center;	
 	background-size: cover;
 }
 
