--- a/css/main.css
+++ b/css/main.css
@@ -246,6 +246,16 @@ header .social li:first-child{
 	background-size: cover;
 }
 
+.hero::before{
+	position: absolute;
+    	top: 0;
+    	left: 0;
+    	right: 0;
+	height:130px;
+    	background: linear-gradient(to bottom, rgba(0,0,0, 0.25) 20%, rgba(0,0,0, 0) 80% );
+	content:"";
+}
+
 .hero > .container{
 	position:relative;
 	height:100%;
