--- a/css/main.css
+++ b/css/main.css
@@ -608,7 +608,7 @@ a.app_link{
 #siteplan h1,#map-line > h1{
 color: #525151;
     font-family: "open_bold", Helvetica, Arial, sans-serif;
-    font-size: 34px;
+    font-size: 4rem;
     font-weight: bold;
     line-height: 46px;
     margin: 0 0 20px 0;
