--- a/css/main.css
+++ b/css/main.css
@@ -605,14 +605,16 @@ a.app_link{
 
 /* Site plan section */
 
-#siteplan h1,#map-line > h1{
-color: #525151;
-    font-family: "open_bold", Helvetica, Arial, sans-serif;
-    font-size: 4rem;
-    font-weight: bold;
-    line-height: 46px;
-    margin: 0 0 20px 0;
-    word-break: break-word;
+#siteplan h1,
+#map-line > h1
+#about h1{
+	color: #525151;
+	font-family: "open_bold", Helvetica, Arial, sans-serif;
+	font-size: 4rem;
+	font-weight: bold;
+	line-height: 46px;
+	margin: 0 0 20px 0;
+	word-break: break-word;
 }
 .img-siteplan{
 	margin:4rem 0;
