--- a/css/main.css
+++ b/css/main.css
@@ -547,8 +547,8 @@ a.app_link{
 
 .about .features_list p{
 	color: #767272;
-	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-family: georgia;
+	font-size: 2rem;
 	margin-bottom: 45px;
 	line-height: 32px;
 }
@@ -660,8 +660,8 @@ a.app_link{
 
 #map-line > p{
 	color: #767272;
-	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 16px;
+	font-family: georgia;
+	font-size: 2rem;
 	margin-bottom: 8rem;
 	line-height: 32px;
 }
