--- a/css/main.css
+++ b/css/main.css
@@ -678,9 +678,18 @@ a.app_link{
 }
 
 #map-line > .ml1{
-    height: 75vh;
-    background: url(../img/map-line.jpg) no-repeat center center;
-    background-size: cover;
+	height: 75vh;
+	background: url(../img/map-line.jpg) no-repeat center center;
+	background-size: cover;
+}
+#map-line > .ml1:before{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 260px;
+	background: linear-gradient(to bottom, rgba(250,250,250, 0.25) 20%, rgba(250,250,250, 0) 80% );
+	content: "";
 }
 
 /*		App features 		*/
