--- a/css/main.css
+++ b/css/main.css
@@ -675,21 +675,24 @@ a.app_link{
 	font-size: 2rem;
 	margin-bottom: 8rem;
 	line-height: 32px;
+	text-align:left;
 }
 
 #map-line > .ml1{
 	height: 75vh;
 	background: url(../img/map-line.jpg) no-repeat center center;
 	background-size: cover;
+	position:relative;
 }
 #map-line > .ml1:before{
 	position: absolute;
 	top: 0;
 	left: 0;
 	right: 0;
-	height: 260px;
-	background: linear-gradient(to bottom, rgba(250,250,250, 0.25) 20%, rgba(250,250,250, 0) 80% );
+	height: 300px;
+	background: linear-gradient(to bottom, rgba(250,250,250, 1) 20%, rgba(250,250,250, 0) 80% );
 	content: "";
+	z-index: 999;
 }
 
 /*		App features 		*/
