--- a/css/main.css
+++ b/css/main.css
@@ -505,6 +505,10 @@ a.app_link{
 
 /*		About section 		*/
 
+.about{
+	border-bottom:1px solid #ccc;
+}
+
 .about > div{
 	padding: 100px 0;
 	background: url(../img/acc-top-right.png) no-repeat;
@@ -702,11 +706,12 @@ a.app_link{
 .app_features{
 	width: 100%;
 	padding: 100px 0 20px 0;
-	background-color: #a0e0be;
+	border-bottom:1px solid #ccc;
+	/*background-color: #a0e0be;
 	background-image: -moz-linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);
 	background-image: -o-linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);
 	background-image: -webkit-linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);
-	background-image: linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);
+	background-image: linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);*/
 }
 
 .app_features h1{
