--- a/css/main.css
+++ b/css/main.css
@@ -705,7 +705,6 @@ a.app_link{
 
 .app_features{
 	width: 100%;
-	padding: 100px 0 20px 0;
 	border-bottom:1px solid #ccc;
 	/*background-color: #a0e0be;
 	background-image: -moz-linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);
@@ -714,12 +713,23 @@ a.app_link{
 	background-image: linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);*/
 }
 
+.app_features{
+    padding: 100px 0;
+    background: url(../img/acc-top-right.png) no-repeat;
+    background-position-y: -1px;
+    background-position-x: right;
+    padding-top: 200px;
+}
+
 .app_features h1{
-	color: #fff;
-	font-family: "open_semibold", Helvetica, Arial, sans-serif;
-	font-size: 20px;
-	margin: 50px 0 0 0;
-	word-break: break-word;
+    color: #525151;
+    font-family: "open_bold", Helvetica, Arial, sans-serif;
+    font-size: 4rem;
+    font-weight: bold;
+    line-height: 46px;
+    margin: 0 0 20px 0;
+    word-break: break-word;
+    margin-bottom: 6rem;
 }
 
 .app_features p{
