--- a/css/main.css
+++ b/css/main.css
@@ -713,7 +713,7 @@ a.app_link{
 	background-image: linear-gradient(bottom, #a0e0be 0%, #a0e0be 0.27%, #a0e0be 99.46%, #a0e0be 100%);*/
 }
 
-.app_features{
+.app_features .container{
     padding: 100px 0;
     background: url(../img/acc-top-right.png) no-repeat;
     background-position-y: -1px;
