--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,31 @@
 	<title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }}</title>
 
 	<!--  App Description  -->
-	<meta name="description" content="Capture is a free bootstrap v3.3.2 app landing page perfect to present you IOS, android or windows application in an elegant way."/>
-	<meta charset="utf-8">
-	<meta name="author" content="pixelhint.com">
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
+	<meta charset="utf-8" />
+	<meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
+	<meta http-equiv='X-UA-Compatible' content='IE=edge'>
+	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
+
+	{% if page.excerpt %}
+	<meta name="description" content="{{ page.excerpt| strip_html }}" />
+	<meta property="og:description" content="{{ page.excerpt| strip_html }}" />
+	{% else %}
+	<meta name="description" content="{{ site.description }}">
+	<meta property="og:description" content="{{ site.description }}" />
+	{% endif %}
+
+	{% if page.tags %}
+	<meta name="keywords" content="{{ page.tags | join: ', ' | escape }}"/>
+	{% else %}
+	<meta name="keywords" content="konveksi seragam, makloon seragam, konveksi kaos, konveksi kemeja, konveksi jakarta, konveksi depok"/>
+	{% endif %}
+
+	<meta name="author" content="{{ site.name }}" />
+
+	{% if page.title %}
+	<meta property="og:title" content="{{ page.title }}" />
+	<meta property="twitter:title" content="{{ page.title }}" />
+	{% endif %}
 
 	{% seo %}
 	
