--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,14 @@
 	<script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
+	<!--  Header Section  -->
+	{% include header.html %}
+	<!--  End Header Section  -->
 
-{{ content }}
+	{{ content }}
 
+	<!--  Footer Section  -->
+	{% include footer.html %}
+	<!--  End Footer Section  -->
 </body>
 </html>
