--- a/css/main.css
+++ b/css/main.css
@@ -870,10 +870,11 @@ a.app_link{
 	width: 100%;
 	padding: 100px 0;
 	text-align: center;
-	background-image: -moz-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -o-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: -webkit-linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
-	background-image: linear-gradient(bottom, #47ad76 0%, #47ad76 0.27%, #40c27d 99.46%, #40c27d 100%);
+	padding: 100px 0;
+	background: url(../img/acc-top-right.png) no-repeat;
+	background-position-y: -1px;
+	background-position-x: right;
+	padding-top: 200px;
 }
 
 .sub_box .cta_text{
