--- a/css/main.css
+++ b/css/main.css
@@ -899,7 +899,7 @@ a.app_link{
 	margin-right: -4px;
 	color: #41c17d;
 	font-family: "open_regular", Helvetica, Arial, sans-serif;
-	font-size: 14px;
+	font-size: 1.75rem;
 	vertical-align: middle;
 
 	border-top-left-radius: 2px;
