--- a/css/main.css
+++ b/css/main.css
@@ -871,15 +871,12 @@ a.app_link{
 	padding: 100px 0;
 	text-align: center;
 	padding: 100px 0;
-	background: url(../img/acc-top-right.png) no-repeat;
-	background-position-y: -1px;
-	background-position-x: right;
-	padding-top: 200px;
+	background: #1d7dbe;
 }
 
 .sub_box h2.cta_text{
 	margin-bottom: 50px;
-	color: #525151;
+	color: #fff;
 	font-family: "open_bold", Helvetica, Arial, sans-serif;
 	font-size: 4rem;
 	font-weight: bold;
