--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,4 +13,4 @@
 			<p>Any information collected through our online enquiry form, feedback, phone or web chat services are managed in accordance with the privacy statement. The information provided by our service is not legal advice.</p>
 		</div>
 	</section>
-	<!-- Contact Us Section  -->
+	<!-- // Contact Us Section  -->
