--- a/css/main.css
+++ b/css/main.css
@@ -1128,7 +1128,7 @@ footer .copyright a{
 	
 	.hero .caption h1 span.a4{
 		font-size: 2rem;
-		border-top: 1px dotted #ccc;
+		border-top: 1px dotted #111;
 		margin-top: 2rem;
 		padding-top: 2rem;
 	}
