--- a/css/main.css
+++ b/css/main.css
@@ -1047,7 +1047,9 @@ footer .copyright a{
 @media (max-width: 1400px) {
 	
 	.hero .caption{
-		background:#fff
+		background:#fff;
+		position: absolute;
+		bottom: 10rem;
 	}
 	
 	.hero .caption h1 br{
