--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
 	<header>
 		<div class="container">
 			<div class="hidden-xs hide logo pull-left animated wow fadeInLeft">
-				<img src="img/logo.png" alt="" title="">
+				<img src="/img/logo.png" alt="" title="">
 			</div>
 			<div class="logo-mobile">
-				<img src="img/logo-mobile.png" alt="" title="">
+				<img src="/img/logo-mobile.png" alt="" title="">
 			</div>
 			
 			<nav class="pull-right">
