--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+<!--  Header Section  -->
+{% include header.html %}
+<!--  End Header Section  -->
 
 <article class="post container">
   <h1>{{ page.title }}</h1>
