--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 ---
-<!--  Header Section  -->
-{% include header.html %}
-<!--  End Header Section  -->
+
+{% include jumbotron.html %}
 
 <article class="post container">
   <h1>{{ page.title }}</h1>
