--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,14 @@ layout: default
 ---
 
 {% include jumbotron.html %}
-
+<style>
+  .hero{
+      height: 124px;
+  }
+  .hero .container{
+    display:none;
+  }
+</style>
 <article class="post container">
   <h1>{{ page.title }}</h1>
 
