--- a/_includes/about.html
+++ b/_includes/about.html
@@ -153,8 +153,33 @@
 					<p class="text-lowercase">vel ultrices mauris libero id diam. Vivamus tellus sagittis facilisis nisi quis mollis risus quisque ultrices elit.</p>
 				</div>
 			</div>
-
+			<div class="row">
+				<div class="col-md-12 text-center animated wow fadeIn">
+						<div class="features_list">
+							<p class="fadeIn">
+								<strong>And other facilities :</strong><br/>
+								Parking Area<br/>
+								Truck Facilities / Gate<br/>
+								Container Inspection<br/>
+								Hazardous Cargo<br/>
+								Workshop<br/>
+								Praying Area<br/>
+							</p>
+							<p class="fadeIn">
+								Foodcourt<br/>
+								CFS, Stuffing & Stripping<br/>
+								Station<br/>
+								Specialized Reefer Depot<br/>
+								Container Repair Yard<br/>
+								Container Cleaning<br/>
+								24 hour Professional<br/>
+							</p>
+						</div>					
+					</div>
+				</div>
+			</div>
 		</div>
+
 	</section>
 	<!--  // Features Section  -->
 
