--- a/_includes/about.html
+++ b/_includes/about.html
@@ -156,8 +156,8 @@
 			<div class="row">
 				<div class="col-md-12 text-center animated wow fadeIn">
 						<div class="features_list">
+							<strong class="subhead">AND OTHER FACIITIES :</strong>
 							<p class="fadeIn">
-								<strong>And other facilities :</strong><br/>
 								Parking Area<br/>
 								Truck Facilities / Gate<br/>
 								Container Inspection<br/>
