--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,13 @@ layout: default
   .hero{
       height: 124px;
   }
+  
   .hero .container{
     display:none;
+  }
+  
+  header .container{
+    border-bottom:0;
   }
 </style>
 <article class="post container">
