--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,12 +4,12 @@
 			<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
 			<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
 				<input type="email" id="mc-email" placeholder="Enter your email"/>
-				<button type="submit" id="mc_submit">
+				<a href="https://mail.google.com/mail/?view=cm&fs=1&to=someone@example.com&su=SUBJECT&body=BODY&bcc=someone.else@example.com" id="mc_submit">
 					<i class="icon"></i>
-				</button>
+				</a>
 			</form>
-			<div class="message" id="error_msg">Please Enter A Valid Email.</div>
-			<div class="message" id="success_msg">Thank You For Your Subscription.</div>
+			<!--<div class="message" id="error_msg">Please Enter A Valid Email.</div>
+			<div class="message" id="success_msg">Thank You For Your Subscription.</div>-->
 			<p>Any information collected through our online enquiry form, feedback, phone or web chat services are managed in accordance with the privacy statement. The information provided by our service is not legal advice.</p>
 		</div>
 	</section>
