--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,7 @@
 			</form>
 			<!--<div class="message" id="error_msg">Please Enter A Valid Email.</div>
 			<div class="message" id="success_msg">Thank You For Your Subscription.</div>-->
-			<p>Any information collected through our online enquiry form, feedback, phone or web chat services are managed in accordance with the privacy statement. The information provided by our service is not legal advice.</p>
+			<p>This will open Gmail for email composer. Make sure you are login to your GOOGLE account.</p>
 		</div>
 	</section>
 	<!-- // Contact Us Section  -->
