--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,7 +4,7 @@
 			<h2 class="cta_text animated wow fadeIn">CONTACT US</h2>
 			<form action="" metohd="post" class="animated wow fadeIn" data-wow-duration="2s" id="submit_form">
 				<input type="email" id="mc-email" placeholder="Enter your email"/>
-				<a href="https://mail.google.com/mail/?view=cm&fs=1&to=inquiry@teluklamong.co.id&su=Hallo, We Need an Info..&bcc=errol.widhavian@gmail.com" id="mc_submit">
+				<a href="https://mail.google.com/mail/?view=cm&fs=1&to=inquiry@teluklamongcargo.co.id&su=Hallo, We Need an Info..&bcc=errol.widhavian@gmail.com" id="mc_submit">
 					<i class="icon"></i>
 				</a>
 			</form>
