--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -10,7 +10,10 @@
 			</form>
 			<!--<div class="message" id="error_msg">Please Enter A Valid Email.</div>
 			<div class="message" id="success_msg">Thank You For Your Subscription.</div>-->
-			<p>This will open Gmail for email composer. Make sure you are login to your GOOGLE account.</p>
+			<p>
+				This will open Gmail for email composer. Make sure you are login to your GOOGLE account.<br/>
+				For non GOOGLE account mail composer, please kindly send email to <a href="mailto:inquiry@teluklamongcargo.co.id?Subject=Hallo, We Need an Info.." target="_top">inquiry@teluklamongcargo.co.id</a>.
+			</p>
 		</div>
 	</section>
 	<!-- // Contact Us Section  -->
