--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,10 +22,8 @@
 	<!--  Start Map  -->
 	<section id="map-line">
 		<h1 class="container text-center text-uppercase">WHY <span class="greenText">TELUK LAMONG</span> IS<br/>PERFECT LOCATION FOR YOUR BUSINESS?</h1>
-		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya / Gresik especially to East indonesia</p>
-		<div class="ml1">
-		
-		</div>
+		<p class="container text-center">Teluk Lamong Seaport geographically located in central between East and West of Indonesia so traffic lanes of the container will be centered at Surabaya especially to East indonesia</p>
+		<div class="ml1"></div>
 	</section>
 	<!--  End of Map  -->
 
