--- a/_includes/about.html
+++ b/_includes/about.html
@@ -101,7 +101,7 @@
 							</li>
 						</ul>-->
 
-						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="http://www.youtube.com/embed/Bm3NV3gGB2w?autoplay=1&showinfo=0">
+						<a href="#" class="app_store_btn text-uppercase" id="play_video" data-video="https://www.youtube.com/embed/4MLoL5Y5l4Y?autoplay=1&showinfo=0">
 							<i class="play_icon"></i>
 							<span>Play Video</span>
 						</a>
