--- a/css/main.css
+++ b/css/main.css
@@ -431,14 +431,15 @@ a.app_link{
 
 
 .about_video{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background: rgba(0, 0, 0, .8);
-    display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: rgba(0, 0, 0, 1) !important;
+	display: none;
+	padding:0 !important;
 }
 
 .about_video iframe{
